--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -40,10 +40,15 @@
             color: blue;
             text-decoration: none;
         }
+        p {
+            text-align: right;
+            font-style: italic;
+            font-family: monospace;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to Our Macaron Review Shop!</h1>
+    <h1>Basics & Welcome</h1>
     
     <div class="image-container">
         <div class="image-link">
@@ -58,6 +63,6 @@
 
     <hr>
 
-    <p class="copyright">© wil 2024</p>
+    <p class="copyright">© rsurin 2024</p>
 </body>
 </html>
