--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -20,7 +20,7 @@
     <section class="content">
         <div class="message">
             <h2>This is the Black Block Section</h2>
-            <p>You can put any message or content here.</p>
+            <p>just for transition</p>
         </div>
     </section>
 
